One test does not pass but its logic is implemented