@@ -3,15 +3,21 @@ package edu.macalester.registrar;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Set;
 
 
 public class Course {
+
     private String catalogNumber, title;
+
+    public static int NO_ENROLLMENT_LIMIT = 9999999;
+    public int ENROLLMENT_LIMIT = NO_ENROLLMENT_LIMIT;
     private Set<Student> students = new HashSet<Student>();
-    private int maxEnrollment;
-    private Set<Student> waitList = new HashSet<Student>();
-    private LinkedList<Student> waitListOrder = new LinkedList<Student>();
+    private List<Student> waitList = new LinkedList<Student>();
+
+
+
 
     public String getCatalogNumber() {
         return catalogNumber;
@@ -33,48 +39,56 @@ public class Course {
         return Collections.unmodifiableSet(students);
     }
 
-    public Set<Student> getWaitListStudents() {
-        return Collections.unmodifiableSet(waitList);
+    public List<Student> getWaitList() {
+        return Collections.unmodifiableList(this.waitList);
     }
 
-    void enroll(Student student) {
-        if (!this.isFull() && !this.students.contains(student)){
-            this.students.add(student);
+    public boolean enroll(Student student) {
+        if (!this.isFull() || this.students.contains(student)){
+            if (!this.students.contains(student)) {
+                this.students.add(student);
+            }
+            return true;
         }
-        else if (this.isFull() && !this.students.contains(student) && !this.waitList.contains(student)){
-            this.waitListOrder.push(student);
-            this.waitList.add(student);
+        else {
+            if (!this.waitList.contains(student)){
+                this.waitList.add(student);
+            }
+            return false;
         }
     }
 
     void drop(Student student) {
-        if (this.students.contains(student) && this.waitList.size()==0){
-            students.remove(student);
-        }
-        else if (this.students.contains(student) && this.waitList.size()>0){
+        if (this.students.contains(student)){
             this.students.remove(student);
-            Student s = this.waitListOrder.removeLast();
-            this.waitList.remove(s);
-            s.enrollIn(this);
+            if (this.waitList.size()>0) {
+                Student s = waitList.remove(0);
+                s.enrollIn(this);
+            }
         }
         else {
             if (this.waitList.contains(student)){
                 this.waitList.remove(student);
-                this.waitListOrder.remove(student);
             }
         }
     }
 
     public int getEnrollmentLimit(){
-        return this.maxEnrollment;
+        return this.ENROLLMENT_LIMIT;
     }
 
-    public void setMaxEnrollment(int max){
-        this.maxEnrollment = max;
+    public void setEnrollmentLimit(int max){
+        if (this.students.size() <= max || (this.students.size() > max && this.ENROLLMENT_LIMIT<max)) {
+            this.ENROLLMENT_LIMIT = max;
+            while (!this.isFull() && waitList.size() > 0) {
+                Student s = waitList.remove(0);
+                s.enrollIn(this);
+            }
+        }
     }
 
     public boolean isFull(){
-        if (this.maxEnrollment > this.students.size()){
+        if (this.ENROLLMENT_LIMIT > this.students.size()){
             return false;
         }
         else return true;
